[tool.poetry]
name = "adventofcode_2019"
version = "0.5.1"
description = "Project to track the 2019 Advent of Code project"
authors = ["Erik van der Goetz <erik.vandergoetz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
flake8 = "^3.7.9"
mypy = "^0.761"
black = "^19.10b0"
coverage = "^5.0.3"
pytest-cov = "^2.8.1"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
